<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ryan.mineseeker.PlayActivity"
    android:background="@mipmap/wallpaper">

    <TextView
        android:id="@+id/board_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/remain" />

    <TableLayout
        android:id="@+id/tableForButtons"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignStart="@+id/board_desc"
        android:layout_below="@+id/board_desc"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="2dp"
        android:stretchColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/board_desc">


    </TableLayout>

    <TextView
        android:id="@+id/scan_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/scans"
        app:layout_constraintBottom_toTopOf="@+id/tableForButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gamesplayed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="516dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableForButtons"
        tools:text="@string/games_played" />

    <TextView
        android:id="@+id/highscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="371dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/gamesplayed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableForButtons"
        tools:text="@string/high_score" />
</android.support.constraint.ConstraintLayout>
