<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context="com.example.ryan.mineseeker.MenuActivity"
    android:background="@mipmap/background">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="131dp"
        android:layout_height="85dp"
        android:layout_marginBottom="152dp"
        android:layout_marginEnd="105dp"
        android:layout_marginStart="78dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:contentDescription="@string/splash_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.983"
        app:srcCompat="@drawable/chaika" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="455dp"
            android:layout_height="316dp"
            android:layout_weight="1"
            tools:layout_editor_absoluteX="342dp" />

        <LinearLayout
            android:layout_width="554dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="82dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/playbutton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@mipmap/starbutton"
                android:text="@string/play_button"
                android:textSize="12sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/optionbutton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@mipmap/starbutton"
                android:text="@string/option_button"
                android:textSize="12sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/helpbutton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@mipmap/starbutton"
                android:text="@string/help_button"
                android:textSize="12sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="76dp"
                android:layout_weight="1" />

        </LinearLayout>

        <Space
            android:layout_width="751dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
